--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -1,5 +1,6 @@
 /*Desktop View*/
 .header {
+   overflow: ;
     display: flex;
     background: linear-gradient(#ff1e00, #ad380a);
     justify-content: space-between;
@@ -41,10 +42,11 @@
   .option :hover {
     color: white;
   }
-  .signin-up {
+  .signing-up {
     display: flex;
     padding: 0px 5px;
     list-style-type: none;
+    
   }
   .sign-in {
     padding-right: 50px;
@@ -52,6 +54,15 @@
   }
   .sign-in :hover {
     color: white;
+  }
+  .signin-btn {
+    padding: 10px 10px;
+    height: 2.4rem;
+    border-radius: 3px;
+    background: rgb(222, 9, 241);
+    color: white;
+    cursor: pointer;
+    align-items: center;  
   }
   .signup-btn {
     padding: 10px 10px;
@@ -108,6 +119,15 @@
       justify-content: center;
       height: 10vw;
       padding: 30px 0px;
+    }
+    .sign-in {
+        background: rgb(222, 9, 241);
+        border-radius: 3px;
+        color: white;
+        padding: 20px 0px;
+        width: 80%;
+        align-self: center;
+        border-radius: 3px;
     }
     .sign-up {
       background: rgb(222, 9, 241);
