--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -1,6 +1,6 @@
 /*Desktop View*/
 .header {
-   overflow: ;
+   overflow: auto;
     display: flex;
     background: linear-gradient(#ff1e00, #ad380a);
     justify-content: space-between;
@@ -42,7 +42,7 @@
   .option :hover {
     color: white;
   }
-  .signing-up {
+  .signin-up {
     display: flex;
     padding: 0px 5px;
     list-style-type: none;
@@ -51,6 +51,7 @@
   .sign-in {
     padding-right: 50px;
     align-self: center;
+    float:left;    
   }
   .sign-in :hover {
     color: white;
@@ -59,10 +60,14 @@
     padding: 10px 10px;
     height: 2.4rem;
     border-radius: 3px;
-    background: rgb(222, 9, 241);
+    background: rgb(92, 91, 92);
     color: white;
     cursor: pointer;
-    align-items: center;  
+    align-items: center;
+    position: relative;
+    float: left;
+    
+  
   }
   .signup-btn {
     padding: 10px 10px;
@@ -72,6 +77,9 @@
     color: white;
     cursor: pointer;
     align-items: center;
+    position: relative;
+    float: right;
+    
   }
   .mobile-menu {
     display: none;
@@ -141,6 +149,7 @@
   
     .signin-up {
       display: none;
+      overflow: auto;
     }
   }
   .mobile-menu {
