--- a/client/src/components/LoginForm.css
+++ b/client/src/components/LoginForm.css
@@ -1,5 +1,15 @@
+:root {
+  --text-color:#FFF;
+  --text-secondary:#d8dff2;
+  --bg-color:#F9F6ED;
+  --bg-color-secondary:#1170D1;
+  --login-borderbtm:#4e96f5;
+}
+
+
+
 body {
-    background-color: #F9F6ED !important;
+    background-color: var(--bg-color) !important;
 }
 
 form{
@@ -11,30 +21,40 @@ form{
 }
 
 
-
 .form-group input {
-    width: 100%;
+    width: 90%;
     font-family: inherit;
     border: 0;
-    border-bottom: 2px solid rgb(240, 240, 240);
+    border-bottom: 2px solid var(--text-color);
     outline: 0;
-    font-size: 1.3rem;
-    color: white;
+    font-size: 14px;
+    padding:7px;
+    color: var(--text-color);
     background: transparent;
+    transition: all 0.3s ease-in-out;
   
 }
+
+
+.form-group input:focus{
+  border-bottom: 2px solid var(--login-borderbtm);
+  width: 280px;
+  transition: all 0.3s ease-in-out;
+}
+
 
 h1 {
     font-family: 'Poppins', sans-serif;
     font-size: 50px;
 }
 
-p {
-    color: #d8dff2;
+form p {
+    color: var(--text-secondary);
 }
 
 input:focus {
   outline:none !important;
+  
 }
 
 .form-group label{
@@ -42,9 +62,8 @@ input:focus {
     cursor: text;
 }
 
-
   .form-group {
-    color: white;
+    color: var(--text-color);
     width: 300px;
   }
   
@@ -53,19 +72,16 @@ input:focus {
     flex-direction: column;
     align-items: center;
     padding: 50px 60px;
-    color: white;
-    background: #1170D1;
+    color:var(--text-color);
+    background:var(--bg-color-secondary);
     border-radius: 10px;
     
     box-shadow: 0 0.4px 0.4px rgba(128, 128, 128, 0.109), 0 1px 1px rgba(128, 128, 128, 0.155), 0 2.1px 2.1px rgba(128, 128, 128, 0.195), 0 4.4px 4.4px rgba(128, 128, 128, 0.241), 0 12px 12px rgba(128, 128, 128, 0.35);
   }
-.form-inner input:focus{
-  color: #f5f5f5;
-}
+
 
   .form-inner h3 {
     margin: 0 0 10px 0;
-   color: #042976;
   }
   .form-inner .form-group {
     margin: 12px 0;
