--- a/client/src/components/LoginForm.css
+++ b/client/src/components/LoginForm.css
@@ -23,8 +23,11 @@ form{
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: all 0.3s ease-in-out;
+    overflow: hidden;
+  }
+
     
-}
 
 
 .form-group input {
@@ -77,7 +80,6 @@ form p {
     color:var(--text-color);
     background:var(--bg-color-secondary);
     border-radius: 10px;
-    
     box-shadow: 0 0.4px 0.4px rgba(128, 128, 128, 0.109), 0 1px 1px rgba(128, 128, 128, 0.155), 0 2.1px 2.1px rgba(128, 128, 128, 0.195), 0 4.4px 4.4px rgba(128, 128, 128, 0.241), 0 12px 12px rgba(128, 128, 128, 0.35);
   }
 
@@ -92,3 +94,7 @@ form p {
     width: 100%;
     margin: 18px 0 9px 0;
   }
+.error{
+  color: #ed4545;
+
+}
