--- a/client/src/components/loginBtn.css
+++ b/client/src/components/loginBtn.css
@@ -1,7 +1,7 @@
 
 .btn {
-    margin-top: 20px;
-    padding: 5px 60px 5px 60px;
+    margin-top: 20px !important;
+    padding: 5px 60px 5px 60px !important;
     border: solid 2px var(--text-color);
     background-color: transparent;
     font-size: 14px;
