--- a/client/src/components/Dashnav.css
+++ b/client/src/components/Dashnav.css
@@ -5,7 +5,9 @@
     align-items:center;
     justify-content: space-between;
     padding: 0 30px 0 30px;
-    border-bottom: 1px solid var(--bg-color-secondary);
+    border-bottom: 1px solid #c9c9c9;
+    box-shadow: 2px 2px 4px #dadada, -2px -2px 5px #ffffff;
+
 }
 
 .nav_icon {
@@ -17,13 +19,18 @@
     color: var(--bg-color-secondary)
 }
 
+
+
 .dashnav-left i, a {
     margin-right: 30px;
     text-decoration: none;
-    color: var(--bg-color-secondary);
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 700;
 
+}
+
+.dashnav-left {
+    padding: 20px !important;
 }
 
 @media only screen and (max-width: 978px){
