Added new homepage, completed detailing for file structure, added routes for navbar accessories, and new svg

--- a/client/src/components/SignInForm/SignInForm.css
+++ b/client/src/components/SignInForm/SignInForm.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     background:linear-gradient(to left, green, white);
     margin:0;
     padding:0;
@@ -48,4 +48,4 @@ body{
   .social i:hover{
     color:red;
     cursor:pointer;
-  }
+  } */
