--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -1,34 +1,38 @@
 /*Desktop View*/
 .header {
-   overflow: auto;
+    overflow: visible;
     display: flex;
-    background: linear-gradient(#ff1e00, #ad380a);
     justify-content: space-between;
     align-items: center;
-    padding: 0px 40px;
-    height: 80px;
+    height: 8vh;
   }
+
   .logo-nav {
+    margin-top: 20px;
     display: flex;
+    flex: 1;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
   }
+
   .logo-container {
     display: flex;
     align-items: center;
     justify-content: center;
   }
+
   .logo {
-    width: 45px;
-    height: 45px;
+    width: 80px;
+    height: 80px;
   }
+
   .nav-options {
-    padding-left: 25px;
     display: grid;
     grid-template-columns: repeat(3, auto);
-    grid-gap: 50px;
+    grid-gap: 15vh;
     list-style-type: none;
   }
+
   .mobile-option {
     display: none;
   }
@@ -87,12 +91,14 @@
   @media (max-width: 648px) {
     /*Mobile View */
     .header {
-      padding: 0px 10px;
+      height: 10vh;
     }
+
     .logo {
       width: 45px;
       height: 45px;
     }
+
     .nav-options {
       display: flex;
       width: 100%;
@@ -115,7 +121,6 @@
       align-content: center;
       padding-left: 0px;
     }
-  
     .menu-icon {
       width: 45px;
       height: 45px;
