--- a/client/src/components/Sidebar.css
+++ b/client/src/components/Sidebar.css
@@ -17,23 +17,40 @@
     margin-top: 15px !important;
     font-family: 'Poppins', sans-serif;
     font-size: 13px;
+    letter-spacing: none!important;
 }
 
-.sidebar-menu {
+.sidebar-menu  {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
+
 .sidebar-links {
     padding: 17px !important;
+    transition: all 0.3s ease-in-out;
+    
 }
 
+
+
 .sidebar-links i {
-    padding-right: 6px!important;
+    padding-right: 6px !important;
+    font-size: 12px;
 }
 
 .sidebar-links a {
-    color: #fff !important;
-
+    color: var(--text-color);
+    
 }
+
+
+.sidebar-links a:hover {
+    background-color: var(--text-color);
+    color: var(--bg-color-secondary);
+    border-radius: 5px;
+    padding: 7px 60px 7px 60px !important;
+    transition: all 0.3s ease-in-out;
+}
+
