Adjusted colors and added template for possible footer and the bottom of the page

--- a/client/src/components/Body/Body.scss
+++ b/client/src/components/Body/Body.scss
@@ -6,10 +6,10 @@
 
 // Global variables
 $text: #000000;
-$light-pink: #fff0f0;
-$pink: #ffe9e9;
-$dark-pink: #f9c4d2;
-$pink-border: #b18597;
+$light-pink: #FFB703;
+$pink: #81ff75;
+$dark-pink: #5354b1;
+$pink-border: #1b1b1be3;
 $pink-shadow: #1b1b1be3;
 
 body {
