--- a/client/src/components/CustomerForm/cf.scss
+++ b/client/src/components/CustomerForm/cf.scss
@@ -1,59 +1,12 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
 // Global variables
-$text: #000000;
+$text: black;
 $light-pink: #FFB703;
 $pink: #81ff75;
 $dark-pink: #5354b1;
 $pink-border: #1b1b1be3;
 $pink-shadow: #1b1b1be3;
 
-body {
-    z-index: 9999;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: calc(16px + .4vw);
-    background: url(../../assets/head.svg) no-repeat center top;
-    background-size: cover;
-    transition: all .4s;
-}
-
-.bodyContainer {
-    background: url(../../assets/opt.svg) no-repeat center top;
-    background-size: cover;
-    height: 100vh;
-    filter: drop-shadow(.5px 3px 3.8px rgba(0, 0, 0, 1));
-}
-
-.bodyText {
-    margin: 12% 20%;
-    color: rgba(245, 245, 245, 0.884);
-    text-align: center;
-}
-
-.paraContainer {
-    padding: 1.5%;
-}
-
-.paraText {
-    font-size: calc(20px + .5vw);
-    font-weight: 500;
-    margin-top: 15px;
-}
-
-.section-head {
-    font-size: calc(20px + 2vw);
-    font-weight: 700;
-    letter-spacing: -0.02em;
-    position: relative;
-    line-height: .7em;
-    pointer-events: none;
-    margin-top: 10px;
-}
-
+// Button Adjustments
 button {
     position: relative;
     display: inline-block;
@@ -107,15 +60,15 @@ button {
         }
       }
     }
-  }
+}
 
-.section-head-2 {
-    font-size: calc(10px + 2vw);
-    font-weight: 700;
-    letter-spacing: -0.02em;
-    position: relative;
-    line-height: .5em;
-    pointer-events: none;
-    margin-right: 1.2rem;
-    margin-top: 6rem;
+.cellInput {
+    margin: 30px 0 20px 0;
+    width: 250px;
+    height: 50px;
+    text-align: center;
+    border: none;
+    filter: drop-shadow(.5px 3px 3.8px rgba(0, 0, 0, 1));
+    border-radius: 20px;
+    font-size: calc(16px + .4vw);
 }
