--- a/client/src/components/LoginForm/LoginForm.css
+++ b/client/src/components/LoginForm/LoginForm.css
@@ -36,7 +36,7 @@ input:focus {
     width: 90%;
     font-family: inherit;
     border: 0;
-    border-bottom: 2px solid var(--text-color);
+    border-bottom: 2px solid #6C6DBA;
     outline: 0;
     font-size: 14px;
     padding:7px !important;
@@ -47,7 +47,7 @@ input:focus {
 
 
 .form-group input:focus{
-  border-bottom: 2px solid var(--login-borderbtm);
+  border-bottom: 2px solid #6C6DBA;
   width: 280px;
   transition: all 0.3s ease-in-out;
 }
@@ -78,10 +78,10 @@ input:focus {
     flex-direction: column;
     align-items: center;
     padding: 50px 60px !important;
-    color:var(--text-color);
-    background:var(--bg-color-secondary);
+    color: #fff;
+    background:rgba(255, 255, 255, 0.268);
     border-radius: 10px;
-    box-shadow: 0 0.4px 0.4px rgba(128, 128, 128, 0.109), 0 1px 1px rgba(128, 128, 128, 0.155), 0 2.1px 2.1px rgba(128, 128, 128, 0.195), 0 4.4px 4.4px rgba(128, 128, 128, 0.241), 0 12px 12px rgba(128, 128, 128, 0.35);
+    
   }
 
 
