--- a/client/src/components/loginBtn/loginBtn.css
+++ b/client/src/components/loginBtn/loginBtn.css
@@ -1,19 +1,20 @@
 .btn {
-    margin-top: 20px !important;
-    padding: 5px 60px 5px 60px !important;
-    border: solid 2px var(--text-color);
+    display: flex;
+    padding: 5px 40px 5px 40px !important;
+    border: solid 2px #6C6DBA;
     background-color: transparent;
     font-size: 14px;
     font-weight: bold;
-    color: var(--text-color);
+    color: #6C6DBA;
     border-radius: 6px;
     transition: all 0.3s ease-in-out;
     cursor: pointer;
+    margin-right: none !important;
 }
 
 .btn:hover{
     background-color: var(--text-color);
-    color: var(--bg-color-secondary);
+    color:#6C6DBA;
     transition: all 0.3s ease-in-out;
     cursor: pointer;
 }
