--- a/client/src/components/Checkins/Checkins.css
+++ b/client/src/components/Checkins/Checkins.css
@@ -13,27 +13,26 @@ input:focus {
   
   .checkin{
       display: flex;
-      height: 550px;
-      padding: 20px 0 0 20px !important;
-      background-color: rgba(255, 255, 255, 0.268);
-  
+      background-color: rgba(64, 85, 206, 0.836);
+      height: 60vh;
+      margin-left: 30px;
     }
   
-      
   .checkins-inner h1 {
       color:#fff;
+      width: 100%;
       display: flex;
       align-self: flex-start;
-      margin-bottom: 10px !important;
+      margin-bottom: 10px;
   }
   
   .checkins-group input {
       width: 90%;
       font-family: inherit;
       border: 0;
-      border-bottom: 2px solid #6C6DBA;
+      border-bottom: 2px solid #ffffff;
       outline: 0;
-      font-size: 14px;
+      font-size: 18px;
       padding:7px !important;
       color: #fff;
       background: transparent;
@@ -41,14 +40,11 @@ input:focus {
     
   }
   
-  
   .checkins-group input:focus{
     border-bottom: 2px #6f6f6f;
     width: 280px;
     transition: all 0.3s ease-in-out;
   }
-  
-  
   
   .checkins-group label{
     font-size: 14px;
@@ -69,13 +65,12 @@ input:focus {
   
   .checkins-inner{
       display: flex;
-      flex-direction: column;
       align-items: center;
+      flex-direction: column;
       padding: 30px 40px 0 40px !important;
       border-radius: 10px;
-
+      height: 30vh;
     }
-  
   
     .form-inner h3 {
       margin: 0 0 10px 0 !important;
@@ -92,8 +87,7 @@ input:focus {
     .checkin-btn {
         margin-top: 20px !important;
         padding: 5px 60px 5px 60px !important;
-        border: solid 2px #6C6DBA;
-        background-color: transparent;
+        border: solid 2px #ebdf3c;
         font-size: 14px;
         font-weight: bold;
         color: #6C6DBA;
@@ -103,8 +97,12 @@ input:focus {
     }
     
     .checkin-btn:hover{
-        background-color:#6C6DBA;
+        background-color:#29292c;
         color: #fff;
         transition: all 0.3s ease-in-out;
         cursor: pointer;
+    }
+
+    .checkin-btn:active {
+      font-size: calc(1.25vw);
     }
