Mobile responsiveness changes to home pg

--- a/client/src/components/Body/Body.css
+++ b/client/src/components/Body/Body.css
@@ -24,6 +24,7 @@ body {
     margin: 12% 20%;
     color: rgba(255, 255, 255, 0.932);
     text-align: center;
+    padding-top: 20px;
 }
 
 .paraContainer {
@@ -34,7 +35,7 @@ body {
     font-size: calc(20px + .5vw);
     font-weight: 500;
     margin-top: 15px;
-    pointer-events: none;
+    /* pointer-events: none; REMOVED TO ALLOW CLICK TO CALL AND CLICK TO EMAIL*/
 }
 
 .section-head {
@@ -59,7 +60,7 @@ body {
     margin-top: 6rem;
 }
 
-/*Mobile VIew */
+/*Mobile View */
 @media (max-width:648px) {
 
 .bodyText {
@@ -68,13 +69,9 @@ body {
     overflow:auto; 
     /* border: 2px solid red; */
     padding-bottom: 10%;
-
+    margin: 0;
 }
-/* .paraContainer{
-    
-    overflow: auto;
-    height: 100%;
-    box-sizing: content-box; */
+
 
 .bodyText::-webkit-scrollbar {
     display: none;
@@ -82,8 +79,10 @@ body {
 
 .paraContainer{
     padding: 10px;
-}
-.section-head-2{
     
 }
+.section-head-2{
+width: 100%;
+}
+
 }
