--- a/client/src/components/Body/Body.css
+++ b/client/src/components/Body/Body.css
@@ -16,15 +16,16 @@ body {
 .bodyContainer {
     background: url(../../assets/opt.svg) no-repeat center top;
     background-size: cover;
-    height: 100vh;
+    height: 100%;
     filter: drop-shadow(.5px 3px 3.8px rgba(0, 0, 0, 1));
+    overflow: hidden;
 }
 
 .bodyText {
     margin: 12% 20%;
     color: rgba(255, 255, 255, 0.932);
-    text-align: center;
-    padding-top: 20px;
+    text-align: center; 
+    overflow:auto;   
 }
 
 .paraContainer {
@@ -60,6 +61,13 @@ body {
     margin-top: 6rem;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+
+  }
+  .bodyText::-webkit-scrollbar {
+    display: none;
+  }
 /*Mobile View */
 @media (max-width:648px) {
 
