--- a/client/src/components/Body/Body.css
+++ b/client/src/components/Body/Body.css
@@ -16,7 +16,7 @@ body {
 .bodyContainer {
     background: url(../../assets/opt.svg) no-repeat center top;
     background-size: cover;
-    height: 100%;
+    height: 100vh;
     filter: drop-shadow(.5px 3px 3.8px rgba(0, 0, 0, 1));
     overflow: hidden;
 }
@@ -29,7 +29,7 @@ body {
 }
 
 .paraContainer {
-    padding: 1.5%;
+    padding: 1.8%;
 }
 
 .paraText {
