--- a/client/src/components/LoginForm/LoginForm.css
+++ b/client/src/components/LoginForm/LoginForm.css
@@ -79,9 +79,8 @@ input:focus {
     align-items: center;
     padding: 50px 60px !important;
     color: #fff;
-    background:rgba(255, 255, 255, 0.268);
+    background:rgb(0, 0, 0);
     border-radius: 10px;
-    
   }
 
 
